--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0",
+    "firebase": "^10.1.0",
+    "mongodb": "^5.7.0",
+    "react-icons": "^4.10.1"
   }
 }
