--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop-now",
+  "name": "easy-shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,21 +13,21 @@
     "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
+    "jose": "^4.14.4",
+    "mongodb": "^5.7.0",
     "next": "13.4.12",
-    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-text-modifier": "^1.0.0",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "daisyui": "^3.5.0",
-    "firebase": "^10.1.0",
-    "mongodb": "^5.7.0",
-    "react-icons": "^4.10.1"
+    "daisyui": "^3.5.0"
   }
 }
