--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "encoding": "^0.1.13",
     "eslint": "8.46.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.1.2",
     "react-text-modifier": "^1.0.0",
     "server-only": "^0.0.1",
     "swiper": "^10.0.4",
